updated action schema to Summary
